towards gap derivate

--- a/python_pre_study/rram_study.ipynb
+++ b/python_pre_study/rram_study.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,13 @@
     "# grid\n",
     "# g_step = 1e-12\n",
     "# v_step = 1e-1\n",
-    "g_step = 1e-12\n",
+    "g_step = 1e-11\n",
     "v_step = 1e-1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,9 @@
      "output_type": "stream",
      "text": [
       "v_m shape: (36,)\n",
-      "gaps shape: (1600,)\n"
+      "gaps shape: (161,)\n",
+      "XX shape: (161, 36)\n",
+      "YY shape: (161, 36)\n"
      ]
     }
    ],
@@ -138,12 +140,14 @@
     "# gaps = np.array([np.linspace(p_gap_min, p_gap_max, gaps_number)]).T\n",
     "XX, YY = np.meshgrid(v_m, gaps)\n",
     "print('v_m shape: ' + str(v_m.shape))\n",
-    "print('gaps shape: ' + str(gaps.shape))"
+    "print('gaps shape: ' + str(gaps.shape))\n",
+    "print('XX shape: ' + str(XX.shape))\n",
+    "print('YY shape: ' + str(YY.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -152,8 +156,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eq_resistance shape: (351, 1600)\n",
-      "eq_current shape: (351, 1600)\n"
+      "eq_current shape: (161, 36)\n",
+      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]]\n",
+      "eq_resistance shape: (161, 36)\n"
      ]
     }
    ],
@@ -164,19 +175,23 @@
     "# def resistance(v, g):\n",
     "#     return v/(p_I0*math.exp(-g/p_g0)*math.sinh(v/p_V0))\n",
     "# with outer\n",
-    "eq_current = np.outer(np.sinh(v_m/p_V0), p_I0*np.exp(-gaps/p_g0))\n",
+    "eq_current = np.outer(p_I0*np.exp(-gaps/p_g0), np.sinh(v_m/p_V0))\n",
+    "# problem: \n",
+    "eq_current_2 = np.outer(np.sinh(v_m/p_V0), p_I0*np.exp(-gaps/p_g0)).T\n",
+    "print('eq_current shape: ' + str(eq_current.shape))\n",
+    "\n",
     "# with matrix like multiplication\n",
     "# eq_current_2 = np.array([np.sinh(v_m/p_V0)]).T * np.array(p_I0*np.exp(-gaps/p_g0)).T\n",
-    "# print(eq_current-eq_current_2)\n",
+    "print(eq_current-eq_current_2)\n",
     "# element wise division\n",
-    "eq_resistance = np.divide(v_m, eq_current.T).T\n",
-    "print('eq_resistance shape: ' + str(eq_resistance.shape))\n",
-    "print('eq_current shape: ' + str(eq_current.shape))\n"
+    "# eq_resistance = np.divide(v_m, eq_current.T).T\n",
+    "eq_resistance = np.divide(v_m, eq_current)\n",
+    "print('eq_resistance shape: ' + str(eq_resistance.shape))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +205,11 @@
     "        )\n",
     "    ]\n",
     "    layout_3d_r = plotly.graph_objs.Layout(\n",
-    "        scene=plotly.graph_objs.Scene(\n",
-    "            xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
-    "            yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
-    "            zaxis=plotly.graph_objs.ZAxis(title='equivalent resistance [ohm]')\n",
-    "        ),\n",
+    "#         scene=plotly.graph_objs.Scene(\n",
+    "#             xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
+    "#             yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
+    "#             zaxis=plotly.graph_objs.ZAxis(title='equivalent resistance [ohm]')\n",
+    "#         ),\n",
     "        title='Read resistance: gap vs read_voltage'\n",
     "    )\n",
     "    fig_r = plotly.graph_objs.Figure(data=data_3d_r, layout=layout_3d_r)\n",
@@ -209,12 +224,12 @@
     "        )\n",
     "    ]\n",
     "    layout_3d_i = plotly.graph_objs.Layout(\n",
-    "        scene=plotly.graph_objs.Scene(\n",
-    "            xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
-    "            yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
-    "            zaxis=plotly.graph_objs.ZAxis(title='current [A]')\n",
-    "        ),\n",
-    "        title='Read resistance: gap vs read_voltage'\n",
+    "#         scene=plotly.graph_objs.Scene(\n",
+    "#             xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
+    "#             yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
+    "#             zaxis=plotly.graph_objs.ZAxis(title='current [A]')\n",
+    "#         ),\n",
+    "        title='RRAM current: gap vs read_voltage'\n",
     "    )\n",
     "    fig_i = plotly.graph_objs.Figure(data=data_3d_i, layout=layout_3d_i)\n",
     "    plotly.offline.plot(fig_i, filename = 'eq_current_3d.html')\n"
