identified parasitic capacitance as source of problems

--- a/python_pre_study/rram_study_2d_arrays.ipynb
+++ b/python_pre_study/rram_study_2d_arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# constants\n",
@@ -52,6 +54,8 @@
     "# taken from stanford's model\n",
     "p_Rth = 5e5 # 5e5  # unit: K/W   effective thermal resistance\n",
     "# arizona's model\n",
+    "# p_tstep = 5e-12 #for temp\n",
+    "# p_Rth = p_tstep/3.1825e-16 # unit: K/W\n",
     "p_L = 5e-9   # from (0:inf); # Oxide thickness (m)\n",
     "p_gap_min = 0.1e-9   # from (0:L); # Min. gap distance (m)\n",
     "p_gap_max = 1.7e-9   # from (gap_min:L); # Max. gap distance (m)\n",
@@ -90,12 +94,12 @@
     "# g_step = 1e-12\n",
     "# v_step = 1e-1\n",
     "g_step = 1e-11\n",
-    "v_step = 1e-1"
+    "v_step = 1e-2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -117,27 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v_m shape: (36,)\n",
-      "gaps shape: (161,)\n",
-      "XX shape: (161, 36)\n",
-      "YY shape: (161, 36)\n"
+      "v_m shape: (1, 351)\n",
+      "gaps shape: (1, 161)\n",
+      "XX shape: (161, 351)\n",
+      "YY shape: (161, 351)\n"
      ]
     }
    ],
    "source": [
     "voltages_number = int((v_max - v_min)/v_step + 1)\n",
     "gaps_number = int((p_gap_max - p_gap_min)/g_step + 1)\n",
-    "v_m = np.linspace(v_min, v_max, voltages_number)\n",
-    "gaps = np.linspace(p_gap_min, p_gap_max, gaps_number)\n",
-    "# v_m = np.array([np.linspace(v_min, v_max, voltages_number)]).T\n",
-    "# gaps = np.array([np.linspace(p_gap_min, p_gap_max, gaps_number)]).T\n",
+    "v_m = np.array([np.linspace(v_min, v_max, voltages_number)])\n",
+    "gaps = np.array([np.linspace(p_gap_min, p_gap_max, gaps_number)])\n",
     "XX, YY = np.meshgrid(v_m, gaps)\n",
     "print('v_m shape: ' + str(v_m.shape))\n",
     "print('gaps shape: ' + str(gaps.shape))\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -156,33 +158,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eq_current shape: (161, 36)\n",
-      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " ..., \n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]]\n",
-      "eq_resistance shape: (161, 36)\n"
+      "------------------------------\n",
+      "- 2D-Data structures:        -\n",
+      "-   rows:    gaps            -\n",
+      "-   columns: voltages        -\n",
+      "------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "eq_resistance shape: (161, 351)\n"
      ]
     }
    ],
    "source": [
+    "##################################\n",
+    "# current and resistances\n",
+    "##################################\n",
+    "print('------------------------------')\n",
+    "print('- 2D-Data structures:        -')\n",
+    "print('-   rows:    gaps            -')\n",
+    "print('-   columns: voltages        -')\n",
+    "print('------------------------------')\n",
+    "print('\\n\\n')\n",
+    "#\n",
     "# idea\n",
     "# r = v./(p_I0*exp(-g/p_g0)*sinh(v/p_V0))\n",
     "# \n",
     "# def resistance(v, g):\n",
     "#     return v/(p_I0*math.exp(-g/p_g0)*math.sinh(v/p_V0))\n",
     "# with outer\n",
-    "eq_current = np.outer(p_I0*np.exp(-gaps/p_g0), np.sinh(v_m/p_V0))\n",
-    "# problem: \n",
-    "eq_current_2 = np.outer(np.sinh(v_m/p_V0), p_I0*np.exp(-gaps/p_g0)).T\n",
-    "print('eq_current shape: ' + str(eq_current.shape))\n",
+    "# eq_current_outer = np.outer(p_I0*np.exp(-gaps/p_g0), np.sinh(v_m/p_V0))\n",
     "\n",
+    "# with elemtn wise matrix like multiplication\n",
+    "# eq_current = (np.sinh(v_m/p_V0).T * p_I0*np.exp(-gaps/p_g0)).T\n",
     "# with matrix like multiplication\n",
-    "# eq_current_2 = np.array([np.sinh(v_m/p_V0)]).T * np.array(p_I0*np.exp(-gaps/p_g0)).T\n",
-    "print(eq_current-eq_current_2)\n",
+    "eq_current = np.dot(np.sinh(v_m/p_V0).T, p_I0*np.exp(-gaps/p_g0)).T\n",
+    "# print('eq_current shape: ' + str(eq_current.shape))\n",
+    "\n",
+    "# print(eq_current-eq_current_2)\n",
     "# element wise division\n",
     "# eq_resistance = np.divide(v_m, eq_current.T).T\n",
     "eq_resistance = np.divide(v_m, eq_current)\n",
@@ -191,8 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if plot_3d_r:\n",
@@ -205,11 +220,11 @@
     "        )\n",
     "    ]\n",
     "    layout_3d_r = plotly.graph_objs.Layout(\n",
-    "#         scene=plotly.graph_objs.Scene(\n",
-    "#             xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
-    "#             yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
-    "#             zaxis=plotly.graph_objs.ZAxis(title='equivalent resistance [ohm]')\n",
-    "#         ),\n",
+    "        scene=plotly.graph_objs.Scene(\n",
+    "            xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
+    "            yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
+    "            zaxis=plotly.graph_objs.ZAxis(title='equivalent resistance [ohm]')\n",
+    "        ),\n",
     "        title='Read resistance: gap vs read_voltage'\n",
     "    )\n",
     "    fig_r = plotly.graph_objs.Figure(data=data_3d_r, layout=layout_3d_r)\n",
@@ -237,44 +252,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma shape: (1, 161)\n",
+      "gap_ddt shape: (161, 351)\n"
+     ]
+    }
+   ],
    "source": [
-    "# gap_ddt temperature constant\n",
+    "#################\n",
+    "# gap study:\n",
+    "#################\n",
     "#\n",
+    "# Formula:\n",
+    "# gap_ddt = -Vel0*( exp(-q*Eag/kb/temperature)*exp(gamma*a0/L*q*V(Nt,Nb)/kb/temperature) - exp(-q*Ear/kb/temperature)*exp(-gamma*a0/L*q*V(Nt,Nb)/kb/temperature) );\n",
+    "\n",
+    "##################################\n",
+    "# gap_ddt temperature constant\n",
+    "##################################\n",
     "temperature = p_T0\n",
     "gamma = p_gamma0 - p_beta*np.power(gaps/p_g1, 3)\n",
-    "gap_1 = np.exp(-p_q*p_Eag/p_kb/temperature)*np.exp( np.outer( gamma, v_m*p_a0/p_L*p_q/p_kb/temperature ) )\n",
-    "gap_2 = np.exp(-p_q*p_Ear/p_kb/temperature)*np.exp( np.outer(-gamma, v_m*p_a0/p_L*p_q/p_kb/temperature ) )\n",
+    "print('gamma shape: ' + str(gamma.shape))\n",
+    "gap_aux_1 = np.exp(-p_q*p_Eag/p_kb/temperature)\n",
+    "gap_1 = gap_aux_1*np.exp( np.dot( gamma.T, v_m*p_a0/p_L*p_q/p_kb/temperature ) )\n",
+    "gap_2 = gap_aux_1*np.exp( np.dot(-gamma.T, v_m*p_a0/p_L*p_q/p_kb/temperature ) )\n",
     "gap_ddt = -p_Vel0*( gap_1 - gap_2 )\n",
-    "gap_ddt_th = 1500\n",
+    "gap_ddt_th = 2500\n",
     "gap_ddt[gap_ddt > gap_ddt_th] = gap_ddt_th\n",
     "gap_ddt[gap_ddt < -gap_ddt_th] = -gap_ddt_th\n",
+    "print('gap_ddt shape: ' + str(gap_ddt.shape))\n",
     "\n",
-    "# gap_ddt temp\n",
+    "if plot_3d_g:\n",
+    "\n",
+    "    data_3d_gddt = [\n",
+    "        plotly.graph_objs.Surface(\n",
+    "            x=XX,\n",
+    "            y=YY,\n",
+    "            z=gap_ddt,  # z_data.as_matrix(),\n",
+    "            name='gap_ddt with temp constant'\n",
+    "        )\n",
+    "    ]\n",
+    "    layout_3d_gddt = plotly.graph_objs.Layout(\n",
+    "        scene=plotly.graph_objs.Scene(\n",
+    "            xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
+    "            yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
+    "            zaxis=plotly.graph_objs.ZAxis(title='temperature [K]')\n",
+    "        ),\n",
+    "        title='gap_ddt with temp constant: gap vs read_voltage'\n",
+    "    )\n",
+    "    fig_gddt = plotly.graph_objs.Figure(data=data_3d_gddt, layout=layout_3d_gddt)\n",
+    "    plotly.offline.plot(fig_gddt, filename = 'gap_ddt.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature shape: (161, 351)\n",
+      "gamma shape: (1, 161)\n",
+      "gap_ddt_aux_1 shape: (161, 351)\n",
+      "gap_ddt_aux_2 shape: (161, 351)\n",
+      "gap_ddt_2 shape: (161, 351)\n"
+     ]
+    }
+   ],
+   "source": [
+    "###########################\n",
+    "# gap_ddt temp dependent\n",
+    "###########################\n",
     "#\n",
     "# gap_ddt = -Vel0*( exp(-q*Eag/kb/temperature)*exp(gamma*a0/L*q*V(Nt,Nb)/kb/temperature) - exp(-q*Ear/kb/temperature)*exp(-gamma*a0/L*q*V(Nt,Nb)/kb/temperature) );\n",
-    "temperature = p_T0 + abs( np.multiply(v_m, eq_current.T).T )* p_Rth\n",
-    "gamma = p_gamma0 - p_beta*np.power(gaps/p_g1, 3)\n",
-    "# print('temperature shape: ' + str(temperature.shape))\n",
-    "# print('gamma shape: ' + str(gamma.shape))\n",
     "\n",
-    "gap_ddt_aux_1 = np.exp(-p_q*p_Eag/p_kb/temperature)\n",
-    "# print('gap_ddt_aux_1 shape: ' + str(gap_ddt_aux_1.shape))\n",
-    "gap_ddt_aux_2 = np.outer(gamma, v_m).T*p_a0/p_L*p_q/p_kb  # with outer\n",
-    "# gap_ddt_aux_2 = (np.array([gamma]).T * np.array([v_m])).T *p_a0/p_L*p_q/p_kb\n",
-    "# print('gap_ddt_aux_2 shape: ' + str(gap_ddt_aux_2.shape))\n",
-    "gap_ddt_aux_3 = np.exp( np.divide(  gap_ddt_aux_2, temperature ) )\n",
-    "# print('gap_ddt_aux_3 shape: ' + str(gap_ddt_aux_3.shape))\n",
-    "gap_ddt_aux_4 = np.exp( np.divide(  -gap_ddt_aux_2, temperature ) )\n",
-    "# print('gap_ddt_aux_4 shape: ' + str(gap_ddt_aux_4.shape))\n",
-    "gap_1 = np.multiply(gap_ddt_aux_1, gap_ddt_aux_3)\n",
-    "gap_2 = np.multiply(gap_ddt_aux_1,gap_ddt_aux_4)\n",
-    "gap_ddt_2 = -p_Vel0*( gap_1 - gap_2 )\n",
-    "gap_ddt_th = 1500\n",
-    "gap_ddt_2[gap_ddt_2 > gap_ddt_th] = gap_ddt_th\n",
-    "gap_ddt_2[gap_ddt_2 < -gap_ddt_th] = -gap_ddt_th\n",
+    "# element wise\n",
+    "# temperature = p_T0 + abs( np.multiply(v_m.T, eq_current.T).T )* p_Rth\n",
+    "temperature = p_T0 + abs( v_m * eq_current )* p_Rth\n",
+    "gamma = p_gamma0 - p_beta*np.power(gaps/p_g1, 3)\n",
+    "print('temperature shape: ' + str(temperature.shape))\n",
+    "print('gamma shape: ' + str(gamma.shape))\n",
     "\n",
     "if plot_3d_g:\n",
     "\n",
@@ -296,22 +360,66 @@
     "    )\n",
     "    fig_t = plotly.graph_objs.Figure(data=data_3d_t, layout=layout_3d_t)\n",
     "    plotly.offline.plot(fig_t, filename = 'temperature.html')\n",
+    "\n",
+    "gap_ddt_aux_1 = np.exp(-p_q*p_Eag/p_kb/temperature)\n",
+    "print('gap_ddt_aux_1 shape: ' + str(gap_ddt_aux_1.shape))\n",
+    "gap_ddt_aux_2 = np.outer(gamma, v_m)*p_a0/p_L*p_q/p_kb  # with outer\n",
+    "# gap_ddt_aux_2 = (np.array([gamma]).T * np.array([v_m])).T *p_a0/p_L*p_q/p_kb\n",
+    "print('gap_ddt_aux_2 shape: ' + str(gap_ddt_aux_2.shape))\n",
+    "gap_ddt_aux_3 = np.exp( np.divide(  gap_ddt_aux_2, temperature ) )\n",
+    "# print('gap_ddt_aux_3 shape: ' + str(gap_ddt_aux_3.shape))\n",
+    "gap_ddt_aux_4 = np.exp( np.divide(  -gap_ddt_aux_2, temperature ) )\n",
+    "# print('gap_ddt_aux_4 shape: ' + str(gap_ddt_aux_4.shape))\n",
+    "gap_1 = np.multiply(gap_ddt_aux_1, gap_ddt_aux_3)\n",
+    "gap_2 = np.multiply(gap_ddt_aux_1,gap_ddt_aux_4)\n",
+    "gap_ddt_2 = -p_Vel0*( gap_1 - gap_2 )\n",
+    "# filter\n",
+    "gap_ddt_th = 2500\n",
+    "gap_ddt_2[gap_ddt_2 > gap_ddt_th] = gap_ddt_th\n",
+    "gap_ddt_2[gap_ddt_2 < -gap_ddt_th] = -gap_ddt_th\n",
+    "print('gap_ddt_2 shape: ' + str(gap_ddt_2.shape))\n",
+    "\n",
+    "if plot_3d_g:\n",
+    "\n",
+    "    data_3d_t = [\n",
+    "        plotly.graph_objs.Surface(\n",
+    "            x=XX,\n",
+    "            y=YY,\n",
+    "            z=gap_ddt_2,  # z_data.as_matrix(),\n",
+    "            name='gap_ddt_2 (variable temperature)'\n",
+    "        )\n",
+    "    ]\n",
+    "    layout_3d_t = plotly.graph_objs.Layout(\n",
+    "        scene=plotly.graph_objs.Scene(\n",
+    "            xaxis=plotly.graph_objs.XAxis(title='applied voltage [V]'),\n",
+    "            yaxis=plotly.graph_objs.YAxis(title='gap [m]'),\n",
+    "            zaxis=plotly.graph_objs.ZAxis(title='temperature [K]')\n",
+    "        ),\n",
+    "        title='gap_ddt_2 (variable temperature): gap vs read_voltage'\n",
+    "    )\n",
+    "    fig_t = plotly.graph_objs.Figure(data=data_3d_t, layout=layout_3d_t)\n",
+    "    plotly.offline.plot(fig_t, filename = 'gap_ddt_2.html')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "############################\n",
+    "# Find target_resistances\n",
+    "############################\n",
     "# read resistance for v=v_read\n",
     "resistance_0 = eq_resistance[0:, 0]\n",
-    "closest_v, target_v_idx = find_nearest_sorted(v_m, v_read)\n",
+    "closest_v, target_v_idx = find_nearest_sorted(v_m[0], v_read)\n",
     "# update v_read\n",
-    "v_read = closest_v\n",
+    "if v_read != closest_v:\n",
+    "    print('new v_read:' + str(closest_v))\n",
+    "    v_read = closest_v\n",
     "resistance_0 = eq_resistance[0:, target_v_idx]\n",
     "\n",
     "# target gaps\n",
@@ -322,15 +430,38 @@
     "    new_r, g_idx = find_nearest_sorted(resistance_0, r)\n",
     "    compatible_g_idx[r_idx] = g_idx\n",
     "    compatible_r[r_idx] = new_r\n",
-    "    compatible_g[r_idx] = gaps[g_idx]"
+    "    compatible_g[r_idx] = gaps[0, g_idx]  # gaps shape: (1, 161)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of evaluated gaps: 351\n",
+      "numbed of evaluated voltages: 161\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-ca46de61c1ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mnew_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreq_v_control\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mv_m\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnew_error\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0merror\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mv_control\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreq_v_control\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
    "source": [
+    "############################\n",
+    "# Find r_s\n",
+    "############################\n",
     "# System eq.\n",
     "# v_write / (r_m + r_s) = v_control/r_s\n",
     "# r_m = f( gap, v_m ) = f( gap, v_write - v_control )\n",
@@ -350,6 +481,7 @@
     "    v_control = 0\n",
     "    v_idx = 0\n",
     "    for i in range(0, eq_r_r):  # find the voltage closer that\n",
+    "        eq_current[g_idx, i]\n",
     "        req_v_control = v_write /2  #- v_m[i]  # v_m[i] = eq_current[i,g_idx]*eq_resistance[i,g_idx]\n",
     "        req_rs = req_v_control / eq_current[i,g_idx]\n",
     "        \n",
@@ -369,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
